fix font family and deckgl outline

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Raleway,Helvetica Neue,Helvetica,Arial,sans-serif;
+    font-family: "Helvetica Neue", HelveticaNeue, "TeX Gyre Heros", TeXGyreHeros, FreeSans, "Nimbus Sans L", "Liberation Sans", Arimo, Helvetica, Arial, sans-serif;
 }
 
 .dropdown-menu {
